app/globals.css
@import "tailwindcss";

@theme {
  --color-emerald-50: #f2ffe6;
  --color-emerald-100: #e6ffcc;
  --color-emerald-200: #ccff99;
  --color-emerald-300: #99ff33;
  --color-emerald-400: #66cc00;
  --color-emerald-500: #4d9900;
  --color-emerald-600: #336600;
  --color-emerald-700: #1a3300;
  --color-emerald-800: #0d1a00;
  --color-emerald-900: #004d00;
  --color-emerald-950: #002600;

  --color-background: #ffffff;
  --color-foreground: #004d00;

  --font-poppins: var(--font-poppins), sans-serif;
  --font-roboto: var(--font-roboto), sans-serif;

  --animate-bounce-slow: bounce-slow 3s infinite;

  @keyframes bounce-slow {
    0%, 100% {
      transform: translateY(-5%);
      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    }
    50% {
      transform: translateY(0);
      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    }
  }
}

@layer base {
  *,
  ::after,
  ::before {
    @apply border-emerald-800/10;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

